# Transportation-Management-System-TMS-and-Advanced-Fleet-Operations

./: README.md  pyproject.toml  setup.py
tms/: api.py
tms/tms/doctype/tms_route/: tms_route.py
tms/tms/doctype/tms_settlement/: tms_settlement.py
tms/workspace/tms/: tms.json
